NetBSD Problem Report #41736
From www@NetBSD.org Thu Jul 16 00:23:46 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id 9DDA263BADF
for <gnats-bugs@gnats.netbsd.org>; Thu, 16 Jul 2009 00:23:46 +0000 (UTC)
Message-Id: <20090716002346.62ECA63B883@www.NetBSD.org>
Date: Thu, 16 Jul 2009 00:23:46 +0000 (UTC)
From: lloyd@must-have-coffee.gen.nz
Reply-To: lloyd@must-have-coffee.gen.nz
To: gnats-bugs@NetBSD.org
Subject: pax reports an error when copying zero files
X-Send-Pr-Version: www-1.0
>Number: 41736
>Category: bin
>Synopsis: pax reports an error when copying zero files
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: lukem
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Jul 16 00:25:00 +0000 2009
>Closed-Date: Wed Aug 07 11:44:41 +0000 2024
>Last-Modified: Wed Aug 07 11:44:41 +0000 2024
>Originator: Lloyd Parkes
>Release: 5.99.12
>Organization:
Must Have Coffee
>Environment:
NetBSD rhox.must-have-coffee.gen.nz 5.0 NetBSD 5.0 (GENERIC) #0: Wed Jun 3 19:08:54 NZST 2009 lloyd@homarid.must-have-coffee.gen.nz:/vol/scratch/obj5/amd64/sys/arch/amd64/compile/GENERIC amd64
>Description:
If pax is run in copy mode and the list of files to copy is empty, then pax's exit status is 1. It should be 0.
>How-To-Repeat:
pax -rw . < /dev/null
echo $?
>Fix:
>Release-Note:
>Audit-Trail:
From: Lloyd Parkes <lloyd@must-have-coffee.gen.nz>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: bin/41736: pax reports an error when copying zero files
Date: Thu, 16 Jul 2009 13:24:58 +1200
The following patch fixes the problem.
ftree_arg() returns 0 if there are more files to process and -1 if
there aren't. The old code in ftree_start() considers a lack of files
to be an error. This patch just makes it return (slightly) early
instead of signalling an error.
Index: bin/pax/ftree.c
===================================================================
RCS file: /vol/src/rsync-src/src/bin/pax/ftree.c,v
retrieving revision 1.40
diff -u -r1.40 ftree.c
--- ftree.c 14 Feb 2009 08:10:06 -0000 1.40
+++ ftree.c 16 Jul 2009 01:18:34 -0000
@@ -194,7 +194,7 @@
}
if (ftree_arg() < 0)
- return -1;
+ return 0; /* Nothing to do, so stop now. */
if (tflag && (atdir_start() < 0))
return -1;
return 0;
Responsible-Changed-From-To: bin-bug-people->lukem
Responsible-Changed-By: lukem@NetBSD.org
Responsible-Changed-When: Sun, 28 May 2023 17:02:58 +0000
Responsible-Changed-Why:
State-Changed-From-To: open->closed
State-Changed-By: lukem@NetBSD.org
State-Changed-When: Sun, 28 May 2023 17:02:58 +0000
State-Changed-Why:
Applied your change, as it seems sensible and correct.
I double checked POSIX and didn't seem that we need to exit non-zero
in this case
From: "Luke Mewburn" <lukem@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/41736 CVS commit: src/bin/pax
Date: Sun, 28 May 2023 17:01:46 +0000
Module Name: src
Committed By: lukem
Date: Sun May 28 17:01:46 UTC 2023
Modified Files:
src/bin/pax: ftree.c
Log Message:
pax: exit 0 if stdin filelist is used and empty
If copying a list of files from stdin, exit zero instead of non-zero
if there are no files supplied.
AFAICT, POSIX doesn't require a non-zero an error in this situation,
since there are no files to not match.
Fix from PR bin/41736 by Lloyd Parkes.
To generate a diff of this commit:
cvs rdiff -u -r1.42 -r1.43 src/bin/pax/ftree.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: closed->needs-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Mon, 05 Aug 2024 03:35:47 +0000
State-Changed-Why:
Looks like this could use pullup-9 and pullup-10.
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/41736 CVS commit: src/tests/bin/pax
Date: Mon, 5 Aug 2024 04:05:59 +0000
Module Name: src
Committed By: riastradh
Date: Mon Aug 5 04:05:59 UTC 2024
Modified Files:
src/tests/bin/pax: t_pax.sh
Log Message:
tests/bin/pax: Test pax(1) succeeds with empty file list on stdin.
PR bin/41736: pax reports an error when copying zero files
To generate a diff of this commit:
cvs rdiff -u -r1.4 -r1.5 src/tests/bin/pax/t_pax.sh
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Mon, 05 Aug 2024 14:52:40 +0000
State-Changed-Why:
pullup-9 #1863 https://releng.netbsd.org/cgi-bin/req-9.cgi?show=1863
pullup-10 #776 https://releng.netbsd.org/cgi-bin/req-10.cgi?show=776
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/41736 CVS commit: [netbsd-10] src
Date: Wed, 7 Aug 2024 10:52:49 +0000
Module Name: src
Committed By: martin
Date: Wed Aug 7 10:52:49 UTC 2024
Modified Files:
src/bin/pax [netbsd-10]: ar_subs.c buf_subs.c extern.h file_subs.c
ftree.c pax.c
src/tests/bin/pax [netbsd-10]: t_pax.sh
Log Message:
Pull up following revision(s) (requested by riastradh in ticket #776):
bin/pax/buf_subs.c: revision 1.31
tests/bin/pax/t_pax.sh: revision 1.3
tests/bin/pax/t_pax.sh: revision 1.4
tests/bin/pax/t_pax.sh: revision 1.5
tests/bin/pax/t_pax.sh: revision 1.6
tests/bin/pax/t_pax.sh: revision 1.7
bin/pax/extern.h: revision 1.61
bin/pax/pax.c: revision 1.50
bin/pax/pax.c: revision 1.51
bin/pax/file_subs.c: revision 1.65
bin/pax/ftree.c: revision 1.43
bin/pax/ar_subs.c: revision 1.58
pax: exit 0 if stdin filelist is used and empty
If copying a list of files from stdin, exit zero instead of non-zero
if there are no files supplied.
AFAICT, POSIX doesn't require a non-zero an error in this situation,
since there are no files to not match.
Fix from PR bin/41736 by Lloyd Parkes.
pax: don't overwrite destination if -r -w copy fails
Add more error handling to pax -r -w so that any failure
during the copy to the temporary file (including a failed flush)
prevents any existing destination file from being replaced
with the partial (including possibly empty) temporary file.
The partial temporary file is removed. pax still exists non-zero.
Thanks to Michael van Elst (mlelstv@) for the analysis
of the problem in the PR.
Should fix PR misc/33753.
tests/bin/pax: Add test for pax list in an ungettable cwd.
The list operation has no need to touch the file system, so it should
have no need for open(".") or getcwd() to succeed.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
(The PR was filed about tar(1), which is now bsdtar by default, but
the issue applies to pax(1) too and would continue to apply to tar(1)
if you set MKBSDTAR=no.)
pax(1): Don't require open(".") or getcwd to work for list operation.
PR 44498: tar(1) unnecessarily demands that getcwd() work
tests/bin/pax: Test pax(1) succeeds with empty file list on stdin.
PR bin/41736: pax reports an error when copying zero files
tests/bin/pax: Add some more cwd-related test cases.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
pax(1): Only require getcwd if we're reading without --insecure.
No other paths use the result of getcwd.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
To generate a diff of this commit:
cvs rdiff -u -r1.57 -r1.57.2.1 src/bin/pax/ar_subs.c
cvs rdiff -u -r1.30 -r1.30.2.1 src/bin/pax/buf_subs.c
cvs rdiff -u -r1.60 -r1.60.6.1 src/bin/pax/extern.h
cvs rdiff -u -r1.64 -r1.64.10.1 src/bin/pax/file_subs.c
cvs rdiff -u -r1.42 -r1.42.42.1 src/bin/pax/ftree.c
cvs rdiff -u -r1.49 -r1.49.10.1 src/bin/pax/pax.c
cvs rdiff -u -r1.1 -r1.1.44.1 src/tests/bin/pax/t_pax.sh
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/41736 CVS commit: [netbsd-9] src
Date: Wed, 7 Aug 2024 10:55:30 +0000
Module Name: src
Committed By: martin
Date: Wed Aug 7 10:55:29 UTC 2024
Modified Files:
src/bin/pax [netbsd-9]: ar_subs.c buf_subs.c extern.h file_subs.c
ftree.c pax.c
src/tests/bin/pax [netbsd-9]: t_pax.sh
Log Message:
Pull up following revision(s) (requested by riastradh in ticket #1863):
bin/pax/buf_subs.c: revision 1.31
tests/bin/pax/t_pax.sh: revision 1.3
tests/bin/pax/t_pax.sh: revision 1.4
tests/bin/pax/t_pax.sh: revision 1.5
tests/bin/pax/t_pax.sh: revision 1.6
tests/bin/pax/t_pax.sh: revision 1.7
bin/pax/extern.h: revision 1.61
bin/pax/pax.c: revision 1.50
bin/pax/pax.c: revision 1.51
bin/pax/file_subs.c: revision 1.65
bin/pax/ftree.c: revision 1.43
bin/pax/ar_subs.c: revision 1.58
pax: exit 0 if stdin filelist is used and empty
If copying a list of files from stdin, exit zero instead of non-zero
if there are no files supplied.
AFAICT, POSIX doesn't require a non-zero an error in this situation,
since there are no files to not match.
Fix from PR bin/41736 by Lloyd Parkes.
pax: don't overwrite destination if -r -w copy fails
Add more error handling to pax -r -w so that any failure
during the copy to the temporary file (including a failed flush)
prevents any existing destination file from being replaced
with the partial (including possibly empty) temporary file.
The partial temporary file is removed. pax still exists non-zero.
Thanks to Michael van Elst (mlelstv@) for the analysis
of the problem in the PR.
Should fix PR misc/33753.
tests/bin/pax: Add test for pax list in an ungettable cwd.
The list operation has no need to touch the file system, so it should
have no need for open(".") or getcwd() to succeed.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
(The PR was filed about tar(1), which is now bsdtar by default, but
the issue applies to pax(1) too and would continue to apply to tar(1)
if you set MKBSDTAR=no.)
pax(1): Don't require open(".") or getcwd to work for list operation.
PR 44498: tar(1) unnecessarily demands that getcwd() work
tests/bin/pax: Test pax(1) succeeds with empty file list on stdin.
PR bin/41736: pax reports an error when copying zero files
tests/bin/pax: Add some more cwd-related test cases.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
pax(1): Only require getcwd if we're reading without --insecure.
No other paths use the result of getcwd.
PR bin/44498: tar(1) unnecessarily demands that getcwd() work
To generate a diff of this commit:
cvs rdiff -u -r1.56 -r1.56.46.1 src/bin/pax/ar_subs.c
cvs rdiff -u -r1.29 -r1.29.4.1 src/bin/pax/buf_subs.c
cvs rdiff -u -r1.59.36.1 -r1.59.36.2 src/bin/pax/extern.h
cvs rdiff -u -r1.64 -r1.64.2.1 src/bin/pax/file_subs.c
cvs rdiff -u -r1.42 -r1.42.34.1 src/bin/pax/ftree.c
cvs rdiff -u -r1.49 -r1.49.2.1 src/bin/pax/pax.c
cvs rdiff -u -r1.1 -r1.1.36.1 src/tests/bin/pax/t_pax.sh
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Wed, 07 Aug 2024 11:44:41 +0000
State-Changed-Why:
fixed in HEAD, pulled up to 9 and 10
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.